--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
         run: |
           mkdir -p .cargo
           echo '[patch.crates-io]' > .cargo/config.toml
-          echo 'orbitrs = { path = "../orbitrs" }' >> .cargo/config.toml
+          echo 'orbitrs = { path = "./orbitrs_dep" }' >> .cargo/config.toml
         shell: bash
         
       # Clone the orbitrs dependency
@@ -107,7 +107,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: orbitrs/orbitrs
-          path: ../orbitrs
+          path: orbitrs_dep
       
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -164,14 +164,14 @@ jobs:
         run: |
           mkdir -p .cargo
           echo '[patch.crates-io]' > .cargo/config.toml
-          echo 'orbitrs = { path = "../orbitrs" }' >> .cargo/config.toml
+          echo 'orbitrs = { path = "./orbitrs_dep" }' >> .cargo/config.toml
       
       # Clone the orbitrs dependency
       - name: Clone orbitrs dependency
         uses: actions/checkout@v3
         with:
           repository: orbitrs/orbitrs
-          path: ../orbitrs
+          path: orbitrs_dep
       
       - name: Install cargo-audit
         run: cargo install cargo-audit
@@ -195,14 +195,14 @@ jobs:
         run: |
           mkdir -p .cargo
           echo '[patch.crates-io]' > .cargo/config.toml
-          echo 'orbitrs = { path = "../orbitrs" }' >> .cargo/config.toml
+          echo 'orbitrs = { path = "./orbitrs_dep" }' >> .cargo/config.toml
       
       # Clone the orbitrs dependency
       - name: Clone orbitrs dependency
         uses: actions/checkout@v3
         with:
           repository: orbitrs/orbitrs
-          path: ../orbitrs
+          path: orbitrs_dep
       
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
@@ -234,14 +234,14 @@ jobs:
         run: |
           mkdir -p .cargo
           echo '[patch.crates-io]' > .cargo/config.toml
-          echo 'orbitrs = { path = "../orbitrs" }' >> .cargo/config.toml
+          echo 'orbitrs = { path = "./orbitrs_dep" }' >> .cargo/config.toml
       
       # Clone the orbitrs dependency
       - name: Clone orbitrs dependency
         uses: actions/checkout@v3
         with:
           repository: orbitrs/orbitrs
-          path: ../orbitrs
+          path: orbitrs_dep
       
       - name: Install system dependencies
         run: |
