fix: remove version specification for orbitrs dependency in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ description = "Static analysis tool for Orbit UI framework files"
 
 [dependencies]
 # Core dependencies
-orbitrs = { path = "../orbitrs", version = "0.1.0" }
+orbitrs = { path = "../orbitrs" }
 
 # Parser libraries
 syn = { version = "2.0", features = ["full", "extra-traits"] }
@@ -45,7 +45,3 @@ path = "src/main.rs"
 
 [dev-dependencies]
 criterion = "0.5"
-
-# Patch sections to override dependency sources in different environments
-[patch."https://github.com/orbitrs/orbitrs.git"]
-orbitrs = { path = "../orbitrs", optional = true }
