fix: simplify orbitrs dependency configuration in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,7 @@ description = "Static analysis tool for Orbit UI framework files"
 
 [dependencies]
 # Core dependencies
-orbitrs = { path = "../orbitrs", optional = true }
-
-[features]
-default = ["local"]
-local = ["orbitrs"]
-ci = []
-
-[target.'cfg(feature = "ci")'.dependencies]
-orbitrs = { path = "./orbitrs_dep" }
+orbitrs.workspace = true
 
 # Parser libraries
 syn = { version = "2.0", features = ["full", "extra-traits"] }
