--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ description = "Static analysis tool for Orbit UI framework files"
 
 [dependencies]
 # Core dependencies
-orbitrs.workspace = true
+orbitrs = { workspace = true }
 
 # Parser libraries
 syn = { version = "2.0", features = ["full", "extra-traits"] }
@@ -18,12 +18,12 @@ quote = "1.0"
 proc-macro2 = "1.0"
 
 # Serialization
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 serde_json = "1.0"
 toml = "0.8"
 
 # Error handling
-thiserror = "1.0"
+thiserror.workspace = true
 log = "0.4"
 
 # CLI support
